# proraw-converter

./: .gitignore  CMakeLists.txt  README.md
experiments/: CMakeLists.txt  effect_check.cpp  experiment_common.hpp  libraw_conversion.cpp  my_conversion.cpp  save_prophoto16.cpp  xyz_adjustment.cpp
rawconverter/: CMakeLists.txt  main.cpp  sample.cpp
rawconverter/include/: raw_converter.hpp
test/: CMakeLists.txt  test_common.hpp  test_raw_converter.cpp
